updated service section and added some images

--- a/index.html
+++ b/index.html
@@ -78,57 +78,38 @@
       </div>
     </section>
 
-        <!-- service section -->
-        <section class="max-w-7xl mx-auto px-5 my-6 text-white" id="Services">
-          <div class="text-center">
-            <p class="mb-3 font-montserrat font-medium"></p>
-            <h3 class="text-primary text-3xl font-bold mb-16">What I Do</h3>
-          </div>
-          <!-- service cards -->
-          <div
-            class="my-16 flex flex-col md:flex-row justify-around items-center gap-12"
-          >
-            <div
-              class="w-[354px] px-5 py-8 rounded-lg border border-primary shadow-[#5dadec3b] cursor-pointer shadow-xl"
-            >
-              <img
-                src="src/img/graphic-design.svg"
-                alt=""
-                class="w-[196px] mb-12 mx-auto"
-              />
-              <h5 class="text-center my-5 text-xl">Web Developer</h5>
-              <p class="text-justify">
-                <!-- Info about web dev -->
-              </p>
-            </div>
-            <div
-              class="w-[354px] px-5 py-8 rounded-lg border border-primary shadow-[#5dadec3b] cursor-pointer shadow-xl"
-            >
-              <img
-                src="src/img/graphic-design.svg"
-                alt=""
-                class="w-[196px] mb-12 mx-auto"
-              />
-              <h5 class="text-center my-5 text-xl">Java</h5>
-              <p class="text-justify">
-                <!-- Info about Java -->
-              </p>
-            </div>
-            <div
-              class="w-[354px] px-5 py-8 rounded-lg border border-primary shadow-[#5dadec3b] cursor-pointer shadow-xl"
-            >
-              <img
-                src="src/img/graphic-design.svg"
-                alt=""
-                class="w-[196px] mb-12 mx-auto"
-              />
-              <h5 class="text-center my-5 text-xl">Cloud</h5>
-              <p class="text-justify">
-                <!-- Info about Cloud -->
-              </p>
-            </div>
-          </div>
-        </section>
+     <!-- service section -->
+<section class="max-w-7xl mx-auto px-5 my-6 text-white" id="Services">
+  <div class="text-center">
+    <p class="mb-3 font-montserrat font-medium"></p>
+    <h3 class="text-primary text-3xl font-bold mb-16">What I Do</h3>
+  </div>
+  <!-- service cards -->
+  <div class="my-16 flex flex-col md:flex-row justify-around items-center gap-12">
+    <div class="w-[354px] px-5 py-8 min-h-[500px] rounded-lg border border-primary shadow-[#5dadec3b] cursor-pointer shadow-xl">
+      <img src="src/img/webdev.png" alt="" class="w-[196px] mb-12 mx-auto" />
+      <h5 class="text-center my-5 text-xl">Web Developer</h5>
+      <p class="text-justify">
+        <!-- Info about web dev -->
+      </p>
+    </div>
+    <div class="w-[354px] px-5 py-8 min-h-[500px] rounded-lg border border-primary shadow-[#5dadec3b] cursor-pointer shadow-xl">
+      <img src="src/img/java.png" alt="" class="w-[196px] mb-12 mx-auto" />
+      <h5 class="text-center my-5 text-xl">Java</h5>
+      <p class="text-justify">
+        <!-- Info about Java -->
+      </p>
+    </div>
+    <div class="w-[354px] px-5 py-8 min-h-[500px] rounded-lg border border-primary shadow-[#5dadec3b] cursor-pointer shadow-xl">
+      <img src="src/img/aws.png" alt="" class="w-[196px] mb-12 mx-auto" />
+      <h5 class="text-center my-5 text-xl">Cloud</h5>
+      <p class="text-justify">
+        <!-- Info about Cloud -->
+      </p>
+    </div>
+  </div>
+</section>
+
 
 
             <!-- projects -->
@@ -149,7 +130,7 @@
         <div
           class="border border-primary shadow-xl shadow-[#5dadec3b] md:w-[741px] md:h-96 mx-auto rounded-2xl p-5 md:p-0"
         >
-          <img src="src/img/project-1.svg" alt="" class="p-5 w-full" />
+          <img src="src/img/gemini_clone.png" alt="Google Gemini Clone" class="p-4 rounded-2xl w-full" />
         </div>
         <div
           class="border border-primary shadow-xl shadow-[#5dadec3b] md:w-[741px] md:h-96 mx-auto rounded-2xl p-5"
