updated service section and added some images

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <h5 class="mb-5">Subscribe to our Newsletter</h5>
           <div class="relative">
             <input type="email" name="email" id="email" placeholder="Enter your Email" class="bg-[#2B2E3C] py-5 pl-5 rounded-lg"> 
-            <input type="submit" value="Subscribe" class="bg-primary py-4 px-8 rounded-lg absolute left-44 top-1">
+            <input type="submit" value="Subscribe" class="bg-primary py-4 px-8 rounded-lg absolute left-44 top-1 cursor-pointer">
           </div>
         </div>
 
